; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ldns/extr_rr_functions.c_ldns_soa_serial_datecounter.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ldns/extr_rr_functions.c_ldns_soa_serial_datecounter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"%Y%m%d00\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ldns_soa_serial_datecounter(i64 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.tm, align 4
  %6 = alloca [11 x i8], align 1
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = ptrtoint i8* %12 to i64
  %14 = trunc i64 %13 to i32
  br label %17

15:                                               ; preds = %2
  %16 = call i32 @ldns_time(i32* null)
  br label %17

17:                                               ; preds = %15, %11
  %18 = phi i32 [ %14, %11 ], [ %16, %15 ]
  store i32 %18, i32* %8, align 4
  %19 = getelementptr inbounds [11 x i8], [11 x i8]* %6, i64 0, i64 0
  %20 = call i32 @localtime_r(i32* %8, %struct.tm* %5)
  %21 = call i32 @strftime(i8* %19, i32 11, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %20)
  %22 = getelementptr inbounds [11 x i8], [11 x i8]* %6, i64 0, i64 0
  %23 = call i64 @atoi(i8* %22)
  store i64 %23, i64* %7, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* %3, align 8
  %26 = sub nsw i64 %24, %25
  %27 = icmp sle i64 %26, 0
  br i1 %27, label %28, label %31

28:                                               ; preds = %17
  %29 = load i64, i64* %3, align 8
  %30 = add nsw i64 %29, 1
  br label %33

31:                                               ; preds = %17
  %32 = load i64, i64* %7, align 8
  br label %33

33:                                               ; preds = %31, %28
  %34 = phi i64 [ %30, %28 ], [ %32, %31 ]
  ret i64 %34
}

declare dso_local i32 @ldns_time(i32*) #1

declare dso_local i32 @strftime(i8*, i32, i8*, i32) #1

declare dso_local i32 @localtime_r(i32*, %struct.tm*) #1

declare dso_local i64 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
